Fix spacing

--- a/src/assets/styles/partials/components/_themePicker.scss
+++ b/src/assets/styles/partials/components/_themePicker.scss
@@ -4,10 +4,6 @@
   border: none;
 
   label {
-    padding: relative("-3");
-
-    &:first-of-type {
-      margin-inline-start: relative("-3");
-    }
+    margin-inline-start: relative("-2");
   }
 }
